# ciderpress

./: .cvsignore  .gitignore  CNAME  CP.dsw  CP.sln  LICENSE.txt  README-linux.md  README.md  ReadMe.htm  UpgradeLog.htm  change-log.htm  faq.htm  features.htm  hardware.htm  index.htm  main.css  mdc-out.txt  requested-features.htm
app/: .cvsignore  ACUArchive.cpp  ACUArchive.h  AboutDialog.cpp  AboutDialog.h  ActionProgressDialog.cpp  ActionProgressDialog.h  Actions.cpp  AddClashDialog.cpp  AddClashDialog.h  AddFilesDialog.cpp  AddFilesDialog.h  AppleSingleArchive.cpp  AppleSingleArchive.h  ArchiveInfoDialog.cpp  ArchiveInfoDialog.h  BNYArchive.cpp  BNYArchive.h  BasicImport.cpp  BasicImport.h  CassImpTargetDialog.cpp  CassImpTargetDialog.h  CassetteDialog.cpp  CassetteDialog.h  ChooseAddTargetDialog.cpp  ChooseAddTargetDialog.h  ChooseDirDialog.cpp  ChooseDirDialog.h  CiderPress.rc  Clipboard.cpp  ConfirmOverwriteDialog.cpp  ConfirmOverwriteDialog.h  ContentList.cpp  ContentList.h  ConvDiskOptionsDialog.cpp  ConvDiskOptionsDialog.h  ConvFileOptionsDialog.cpp  ConvFileOptionsDialog.h  CreateImageDialog.cpp  CreateImageDialog.h  (+87 more)
app/Help/: CIDERPRESS.HLP  CiderPress.chm  CiderPress.cnt  CiderPress.hhc  CiderPress.hhk  CiderPress.hhp  CiderPress.hmp  PopUp.txt  PopUpIds.h  README.txt
app/Help/html/: t10.htm  t109.htm  t111.htm  t112.htm  t13.htm  t18.htm  t187.htm  t19.htm  t20.htm  t201.htm  t203.htm  t21.htm  t215.htm  t216.htm  t22.htm  t23.htm  t233.htm  t24.htm  t241.htm  t244.htm  t245.htm  t247.htm  t25.htm  t257.htm  t258.htm  t259.htm  t262.htm  t263.htm  t268.htm  t272.htm  t273.htm  t277.htm  t28.htm  t284.htm  t29.htm  t38.htm  t39.htm  t41.htm  t42.htm  t43.htm  (+26 more)
app/other/: nlist.data.txt
diskimg/: .cvsignore  ASPI.cpp  ASPI.h  CFFA.cpp  CPM.cpp  CP_WNASPI32.H  CP_ntddscsi.h  Container.cpp  DDD.cpp  DIUtil.cpp  DOS33.cpp  DOSImage.cpp  DiskFS.cpp  DiskImg.cpp  DiskImg.h  DiskImgDetail.h  DiskImgPriv.h  FAT.cpp  FDI.cpp  FocusDrive.cpp  GenericFD.cpp  GenericFD.h  Global.cpp  Gutenberg.cpp  HFS.cpp  ImageWrapper.cpp  MacPart.cpp  Makefile  MicroDrive.cpp  Nibble.cpp  Nibble35.cpp  OuterWrapper.cpp  OzDOS.cpp  Pascal.cpp  ProDOS.cpp  RDOS.cpp  README.md  SCSIDefs.h  SPTI.cpp  SPTI.h  (+13 more)
diskimg/libhfs/: COPYRIGHT  Makefile  README  apple.h  block.c  block.h  btree.c  btree.h  config.h  data.c  data.h  file.c  file.h  hfs.c  hfs.h  libhfs.dsp  libhfs.h  libhfs.vcproj  libhfs.vcxproj  libhfs.vcxproj.filters  low.c  low.h  medium.c  medium.h  memcmp.c  node.c  node.h  os.c  os.h  record.c  record.h  version.c  version.h  volume.c  volume.h
images/: Thumbs.db  awp-eagle.htm  big-shk.htm  vol-copy.htm  wolfenstein.htm
linux/: .gitignore  Convert.cpp  GetFile.cpp  MDC.cpp  MakeDisk.cpp  Makefile  PackDDD.cpp  SSTAsm.cpp  StringArray.h
mdc/: .cvsignore  AboutDlg.cpp  AboutDlg.h  ChooseFilesDlg.cpp  ChooseFilesDlg.h  Main.cpp  Main.h  ProgressDlg.cpp  ProgressDlg.h  StdAfx.cpp  StdAfx.h  mdc.clw  mdc.cpp  mdc.dsp  mdc.h  mdc.rc  mdc.vcproj  mdc.vcxproj  mdc.vcxproj.filters  resource.h
nufxlib/: .gitignore  Archive.c  ArchiveIO.c  Bzip2.c  COPYING-LIB  ChangeLog.txt  Charset.c  Compress.c  Crc16.c  Debug.c  Deferred.c  Deflate.c  Entry.c  Expand.c  FileIO.c  Funnel.c  Lzc.c  Lzw.c  Makefile.in  Makefile.msc  MiscStuff.c  MiscStuff.h  MiscUtils.c  NOTES.md  NOTES.txt  NufxLib.h  NufxLibPriv.h  README.txt  Record.c  SourceSink.c  Squeeze.c  SunOS4.h  SysDefs.h  Thread.c  Value.c  Version.c  config.h.in  configure  configure.in  nufxlib.def  (+2 more)
nufxlib/samples/: Common.h  Exerciser.c  ImgConv.c  Launder.c  Makefile.in  Makefile.msc  README-S.txt  TestBasic.c  TestExtract.c  TestNames.c  TestSimple.c  TestTwirl.c
prebuilt/: NufxLib.h  nufxlib2.lib  nufxlib2D.lib
reformat/: AWGS.cpp  AWGS.h  AppleWorks.cpp  AppleWorks.h  Asm.cpp  Asm.h  BASIC.cpp  BASIC.h  CPMFiles.cpp  CPMFiles.h  Charset.cpp  Charset.h  Directory.cpp  Directory.h  Disasm.cpp  Disasm.h  DisasmTable.cpp  DoubleHiRes.cpp  DoubleHiRes.h  DreamGrafix.cpp  HiRes.cpp  HiRes.h  MacPaint.cpp  MacPaint.h  NiftyList.cpp  PascalFiles.cpp  PascalFiles.h  PrintShop.cpp  PrintShop.h  Reformat.cpp  Reformat.h  ReformatBase.cpp  ReformatBase.h  ResourceFork.cpp  ResourceFork.h  Simple.cpp  Simple.h  StdAfx.cpp  StdAfx.h  SuperHiRes.cpp  (+9 more)
tutorial/: Thumbs.db  index.htm
util/: CancelDialog.h  FaddenStd.h  ImageDataObject.cpp  ImageDataObject.h  Modeless.h  MyBitmapButton.cpp  MyBitmapButton.h  MyDIBitmap.cpp  MyDIBitmap.h  MyDebug.cpp  MyDebug.h  MyEdit.cpp  MyEdit.h  MySpinCtrl.cpp  MySpinCtrl.h  PathName.cpp  PathName.h  Pidl.cpp  Pidl.h  ProgressCancelDialog.h  SelectFilesDialog.cpp  SelectFilesDialog.h  ShellTree.cpp  ShellTree.h  SoundFile.cpp  SoundFile.h  StdAfx.cpp  StdAfx.h  Util.cpp  Util.h  UtilLib.h  util.dsp  util.vcproj  util.vcxproj  util.vcxproj.filters
zlib/: zlib.vcxproj  zlib.vcxproj.filters
